--- a/core/templates/municipal-triangle.html
+++ b/core/templates/municipal-triangle.html
@@ -45,7 +45,7 @@
                             </span>
                         </div>
                     </div>
-                {% elif forloop.counter < forloop.last and municipio|lower == row|get_name_municipio|lower %}
+                {% elif forloop.counter < otros|length and municipio|lower == row|get_name_municipio|lower %}
                     <div class="balloon-dialogue second-balloon-dialogue">
                         <strong>
                             {% for letter in 'POSICIÓN'|make_list %}
@@ -137,7 +137,7 @@
                             </span>
                         </div>
                     </div>
-                {% elif forloop.counter < forloop.last and municipio|lower == row|get_name_municipio|lower %} %}
+                {% elif forloop.counter < otros|length and municipio|lower == row|get_name_municipio|lower %} %}
                     <div class="balloon-dialogue second-balloon-dialogue">
                         <strong>
                             {% for letter in 'POSICIÓN'|make_list %}
@@ -240,7 +240,7 @@
                         </span>
                     </div>
                 </div>
-            {% elif forloop.counter < forloop.last and municipio|lower == row|get_name_municipio|lower %}
+            {% elif forloop.counter < otros|length and municipio|lower == row|get_name_municipio|lower %}
                 <div class="balloon-dialogue second-balloon-dialogue">
                     <strong>
                         {% for letter in 'POSICIÓN'|make_list %}
