correccion en la creacion de id para mostrar el total por cada tipo de ingreso

--- a/core/templates/renglon_ingreso.html
+++ b/core/templates/renglon_ingreso.html
@@ -56,14 +56,14 @@
                                                 <span class="position-relative pull-right"
                                                       style="right: 340px">
                                                     Total Asignado:
-                                                    <strong id="asignado_{{ row.tipoingreso_codigo }}">
+                                                    <strong id="asignado_{{ row.list.0.tipoingreso_codigo }}">
                                                     0
                                                     </strong>
                                                 </span>
                                                 <span class="position-relative pull-right"
                                                       style="right: -15px">
                                                     Total Ejecutado:
-                                                   <strong id="ejecutado_{{ row.tipoingreso_codigo }}">
+                                                   <strong id="ejecutado_{{ row.list.0.tipoingreso_codigo }}">
                                                    0
                                                    </strong>
                                                 </span>
