correccion en la construccion de name de los inputs de asignado y ejecutado de cada renglon de ingreso

--- a/core/templates/renglon_ingreso.html
+++ b/core/templates/renglon_ingreso.html
@@ -100,14 +100,14 @@
                                                             <td>
                                                                 <input type="number" class="form-control input-asignado"
                                                                        data-nombre_total="asignado_{{ renglon.tipoingreso_codigo }}"
-                                                                       name="renglon_{{ renglon.codigo }}_asignado"
+                                                                       name="renglon_{{ renglon.rengloningreso_codigo }}_asignado"
                                                                        value="0" min="0">
                                                             </td>
                                                             <td>
                                                                 <input type="number"
                                                                        class="form-control input-ejecutado"
                                                                        data-nombre_total="ejecutado_{{ renglon.tipoingreso_codigo }}"
-                                                                       name="renglon_{{ renglon.codigo }}_ejecutado"
+                                                                       name="renglon_{{ renglon.rengloningreso_codigo }}_ejecutado"
                                                                        value="0" min="0">
                                                             </td>
                                                         </tr>
