--- a/core/templates/renglon_ingreso.html
+++ b/core/templates/renglon_ingreso.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends '_indicator.html' %}
 
-{% block head_extra %}
+{% block extra_header_links %}
     <style>
         .panel-heading {
             cursor: pointer;
@@ -137,7 +137,7 @@
     </div>
 {% endblock %}
 
-{% block extras_js %}
+{% block extra_footer_scripts %}
     <script>
         $(function () {
             let message_box = $('#message');
@@ -170,12 +170,16 @@
                 }
             });
 
-            //mandar a ocultar mensaje despues de 5segundos
-            if (message_box.length > 0) {
-                setTimeout(function () {
-                    message_box.fadeOut('slow');
-                }, 5000);
-            }
+
+            $('#randon').on('click', function () {
+                $('.input-asignado').each(function () {
+                    $(this).val(Math.floor(Math.random() * 10021) + 14);
+                });
+                $('.input-ejecutado').each(function () {
+                    $(this).val(Math.floor(Math.random() * 10002));
+                })
+            });
+
 
             /**
              * @return {number}
