--- a/core/templates/renglon_ingreso.html
+++ b/core/templates/renglon_ingreso.html
@@ -110,14 +110,14 @@
                                                             <td>
                                                                 <input type="number" class="form-control input-asignado"
                                                                        data-nombre_total="asignado_{{ renglon.tipoingreso_codigo }}"
-                                                                       name="renglon_{{ renglon.rengloningreso_codigo }}_asignado"
+                                                                       name="renglon_asignado[{{ renglon.rengloningreso_codigo }}]"
                                                                        value="0" min="0">
                                                             </td>
                                                             <td>
                                                                 <input type="number"
                                                                        class="form-control input-ejecutado"
                                                                        data-nombre_total="ejecutado_{{ renglon.tipoingreso_codigo }}"
-                                                                       name="renglon_{{ renglon.rengloningreso_codigo }}_ejecutado"
+                                                                       name="renglon_ejecutado[{{ renglon.rengloningreso_codigo }}]"
                                                                        value="0" min="0">
                                                             </td>
                                                         </tr>
