--- a/core/templates/renglon_gasto.html
+++ b/core/templates/renglon_gasto.html
@@ -12,7 +12,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 col-sm-12">
-                <form action="{% url 'rengloningreso' %}" method="POST">
+                <form action="{% url 'renglon-gasto' %}" method="POST">
                     <div class="row">
                         {% csrf_token %}
 
