--- a/core/templates/renglon_gasto.html
+++ b/core/templates/renglon_gasto.html
@@ -40,7 +40,7 @@
                         </div>
 
                         {% if messages %}
-                            <div class="col-lg-12 col-md-12 col-sm-12" id="message">
+                            <div class="col-lg-12 col-md-12 col-sm-12 mt-1" id="message">
                                 <div class="alert alert-info">
                                     {% for message in messages %}
                                         <p>{{ message }}</p>
